# frontier-ml-stack

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/data/: overview.md
docs/design/: architecture.md
docs/eval/: overview.md
docs/inference/: overview.md
docs/training/: overview.md
examples/data/: toy.jsonl
src/frontier_ml_stack/: cli.py
src/frontier_ml_stack/data/: build.py  hashing.py  ingest.py  manifest.py  quality.py  schema.py
src/frontier_ml_stack/data/dedup/: simhash.py
src/frontier_ml_stack/data/transforms/: pipeline.py  text.py
src/frontier_ml_stack/eval/: config.py  report.py  runner.py
src/frontier_ml_stack/eval/suites/: behavior_eval.py  loss_eval.py
src/frontier_ml_stack/inference/: bench.py  client.py  server.py  types.py
src/frontier_ml_stack/training/: config.py  data.py  lora.py  run_artifacts.py  sft.py
tests/: test_build_dedup_quality.py  test_data_build.py  test_data_ingest.py  test_eval_config.py  test_lora_utils.py  test_quality.py  test_simhash.py  test_training_data.py  test_transforms_text.py
